--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.3",
     "bootstrap": "^4.3.1",
+    "dotenv": "^7.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
